# Rust-Cli-lyrics-app

./: Cargo.toml  song.lrc
src/: main.rs
